--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
 name="version_color">#f0f0f0</color>
 <color
 name="version_bkgrd">#1a1a48</color>
+    <color name="title_color">#f0f0f0</color>
+    <color name="title_glow">#FF0000</color>
+    <color name="menu_color">#FFFF0F</color>
+    <color name="menu_glow">#FF0000</color>
 </resources>
